01-install_leaderworkerset_api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-lws-operator
