04-install_rhcl.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
