07-install_rhoai3.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
