12-opt125m-cpu-model.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: llm
  labels:
    opendatahub.io/dashboard: 'true'
